Setting up the webpage.

--- a/01-interactiv-min-max-barchart/index.html
+++ b/01-interactiv-min-max-barchart/index.html
@@ -9,6 +9,14 @@
         <title>Interactive Max Min Barchart - d3js Snippets</title>
     </head>
     <body>
-        Test 2
+        <div id="content-container">
+
+            <div id="d3js-frame">Test</div>
+
+        </div>
+
+        <div id="background-image-container">
+			<img src="../assets/images/eikjo-mars-1.webp" id="background-image" alt="">
+		</div>
     </body>
 </html>
